--- a/_posts/2015-08-23-lose.md
+++ b/_posts/2015-08-23-lose.md
@@ -9,4 +9,10 @@ eye_catch: http://p0.qhimg.com/dr/610_376_/t0177ebe68ddc31fc9c.jpg
 
 <!--more-->
 
-通常，我们经历的事情，看过的电影，读到的小说，无论前期怎么周密计划，到最后总会遇到意外，到最后总会有人断后而牺牲，以让团队继续前进。
+通常，我们经历的事情，看过的电影，读到的小说，无论前期怎么周密计划，到最后总会遇到意外，到最后总会有人断后而牺牲，以让团队继续前进。似乎故事结局大多不会太完美，似乎牺牲无法避免，好吧，确实无法避免，所以要想成就伟大的事情，就得有牺牲的觉悟，做好牺牲的准备。
+
+其实，不光是事情，还有为人。经常看武侠的都知道，要想练就一流剑客，必须绝情绝义。当下的社会何尝不是。我自己曾想把自己打造成一个完美的人，然而时间和精力有限，总不能顾全。鱼和熊掌不可兼得，那就只有去彼取此。我想一个人即上通天文，下晓地理，相信只要足够努力，定能完成，因为某某故事里某某妹子通过勤学苦练就达到了。然而，仔细一算，你大部分的时间都在学习计算机，就算你能腾出一倍的时间，充分挤压你的生活，苦心孤诣，你也顶多能多学习一个学科，要想再腾出一倍的时间，恐怕真分身乏术了。而且学而不精，精通一门学科的人不博学，博学的人不精通。再说感情，过多的感情只会是羁绊，生活大爆炸里面谢尔顿就说了：“我同一时间只能维持四份友情，如果再添加一个朋友，他就要和现在的一位朋友断交！”大冰也喜欢普通朋友，像大鹏这样的普通朋友，大家萍水相逢，离开之后，大家各过各的，各玩各的，没事不用天天唠唠。我们在生活中，一边奋斗在大都市，一边也对这远在千里的亲情，长久不联系友情愧疚，这就是成长，就是你成为牛人必要的牺牲。
+
+牺牲，是一个我们都不太愿意听到的字眼，然而却必须要正视。要想成就一番事业，必须有所牺牲，比如我牺牲了每天早下班的晚上业余时间；比如我牺牲了平淡且朴实的生活情趣；比如我牺牲了对爱情轰轰烈烈的追求；比如我牺牲了亲情的天伦之乐。。。等等，你一定会说，每件事情都值得去追求，我同意，然而不是每件事情都能追求到的。另外，我不认为每逢假日就回家看望，就没有牺牲亲情，你本应该付出更多给亲人并且从亲情中享受更多的。既然追求不到，就只有坦然接受，退而求其次，这也是一种牺牲。
+
+总是伴着牺牲啊，那又有什么办法呢，谁让这个社会需要你我的投身建设呢。这个时代背景下，也只有古龙的那句话最能概括了，“人在江湖，身不由己”！既然牺牲在所难免，那就不用悲伤，坦然接受，这只是你人生必须经历的一剂调料。
