--- a/_posts/2015-08-15-start.md
+++ b/_posts/2015-08-15-start.md
@@ -19,6 +19,6 @@ eye_catch: http://www.tianyaclub.com/photo/jd08/jd11860.02.jpg
 
 这儿的文章不想多为世界增添一丝冗余，“若无必要，勿增一瓦”，大家想看一些概念的，请去维基百科，想要解决技术问题的，请去官方文档，这儿既不是这些内容的生产者，也不是他们的搬运工。
 
-当然，我说的这一切也是在扯淡！
+当然，我说的这一切可能也是在扯淡。古之善为士者，微妙玄通，深不可识，为学日益，为道日损，损之又损，以至于无为。劣者所说的只是在批判检点自己，各位读者若有共鸣，当共勉之！
 
 Small mind discuss people, average mind discuss event, great mind discuss idea!
