--- a/_posts/2015-09-04-circle.md
+++ b/_posts/2015-09-04-circle.md
@@ -13,13 +13,13 @@ eye_catch: http://image.tuwang.com/Nature/RuralScene-1920-1363/DaTuKu.org@X-Rura
 
 大自然的鬼斧神工，循环系统让我们叹为观止，相信大家已经很了解了，在此不做赘述。自古总有人在追求长生不老，然而长生的代价是种类数量不在增加，不能享受抚养孩子并见证他们成长的快乐。天地之所以能够长生，就是因为他们不自生。长生虽好，然而时间久了也会累，也会腻，就会思想僵化，停滞不前，不如交给新鲜生命，让他们用对这个世界好奇探寻的热情，继续推动人类向往直前。
 
-纵观历朝历代，无一个不是由盛转衰，承上一代的衰，接下一代的盛，就像一个波函数。已经发生的历史，让我们貌似看到是一个昏君导致了朝代的灭亡，一个明君开启了一个盛世。然而，这深层次的原因，劣者以为并不止这些。从春秋战国起，虽然有周幽王烽火戏诸侯这个导火索，然而让诸侯慢慢强大起来反抗周室并不能由这一个事件来说明。李唐王朝虽然兼容并包，万国来朝，然而终究发生安史之乱，八国并起，让这些发生的并不是唐玄宗杨贵妃两人的罪过，而是李唐王朝建立以来的募兵制导致的。非唐太宗明而立募兵制，也非唐玄宗昏而导致安史之乱。接下来的宋王朝，虽然吸取前人教训，削弱番邦，军队每隔一段时间更好地点、更换将领训练，以此来加强中央集权，然而终逃不过灭国亡朝的命运，算算持续时长，也不过了了两百多年。非一个名将就能奠定千百年基业，也非一个懦弱的昏君就能把万里江山给毁了。后来的明清两朝，中央集权更甚，然而也并没有什么软用。非嗜血强悍就能长治久案，也非高压统一思想就能稳定繁荣。
+纵观历朝历代，无一个不是由盛转衰，承上一代的衰，接下一代的盛，就像一个周期函数。已经发生的历史，让我们貌似看到是一个昏君导致了朝代的灭亡，一个明君开启了一个盛世。然而，这深层次的原因，劣者以为并不止这些。从春秋战国起，虽然有周幽王烽火戏诸侯这个导火索，然而让诸侯慢慢强大起来反抗周室并不能由这一个事件来说明。李唐王朝虽然兼容并包，万国来朝，然而终究发生安史之乱，八国并起，让这些发生的并不是唐玄宗杨贵妃两人的罪过，而是李唐王朝建立以来的募兵制导致的。非唐太宗明而立募兵制，也非唐玄宗昏而导致安史之乱。接下来的宋王朝，虽然吸取前人教训，削弱番邦，军队每隔一段时间更好地点、更换将领训练，以此来加强中央集权，然而终逃不过灭国亡朝的命运，算算持续时长，也不过了了两百多年。非一个名将就能奠定千百年基业，也非一个懦弱的昏君就能把万里江山给毁了。后来的明清两朝，中央集权更甚，然而也并没有什么软用。非嗜血强悍就能长治久案，也非高压统一思想就能稳定繁荣。
 
 那原因是什么呢？早在初中学的马克思初步，就知道这是生产力要进步，每一个朝代没落时期，总是一批官僚地主占据的主要的资源，让真正生产粮食的农民积极性下降，生产力降低，因此心生怨恨，渴望天下重新洗牌。每个朝代的新兴就是一次强有力的重新洗牌， 土地复归于农民，使他们的积极性又一次空前高涨，生产力也明显进步。中央集权越是厉害，这种重新洗牌重新分配资源的需求就越强烈。这可以从清朝太平天国看出来，中国共产党领导的土地革命，也是一个真实写照，地主得几辈子翻不了身。难道是哪些被贪欲迷昏了头的贪官地主太恶霸？那他们又是怎么来的呢，答案是顺其自然，社会发展出来的。
 
 回想一下，一朝建国之初，哪些拼命打江山的人获得了丰厚的社会资源，封建时期就是土地，现在我们统一称之为资源。那些王侯的亲戚朋友也因此顺势整合各种资源，加上些有头脑又敢为的人士成长起来，他们联手再度踏上统治这个社会资源的高位。刚开始的时候，他们也可谓深明大义，辛苦创业，一旦基础牢固，就会因各种因素培养出自私自立的纨绔子弟，各种各样的小事，比如说街坊邻居一些闲言碎语，纨绔子弟又游手好闲不干活，这时底层劳动人民当然怨恨，底层有志有为之士也得不到提拔，社会矛盾就会尖锐。这时，大部分的人就渴望来一次重新洗牌，推翻哪些干活不多，却资源报酬丰富的人，然后自己得到自己该有的私有财产。这个时候，起义推翻前朝就再所难免。
 
-上天是公平的，大自然也是循环往复的好导演。战争虽有伤亡，却是必要的，消灭些人口也是为了有限的资源给所有人类使用。战争过后，重新洗完牌之后，就会又重复上面的情景，以至于就算是现在，大部分资源又回到体制内了，社会主义初级阶段也没跳出这个怪圈。那该如何解决这个问题呢？让人们都接受高等教育，深明大义？好像不太可能，上层阶级以为他们理所当然这样享受世人的供养，因为他们觉得他们或者他们的祖先奋斗过。资本主义的经济危机，好像是一场重新洗牌的执行者，让所有的价值统统归于没有，化整为零，然后再建立起来，重新发展，这不不得不说很大程度上减少了社会矛盾，因为重新洗牌了，下层人民跟上层人民又回到同一起跑线上了，广大的下层人民又斗志昂扬有激情拼命奋斗了。所以说，经济危机未尝不是一件好事，世界首富把财富捐献出去是明智之举，只有那些统治阶级，资源的拥有者才会害怕。
+上天是公平的，大自然也是循环往复的好导演。战争虽有伤亡，却是必要的，消灭些人口也是为了有限的资源给有限的人类使用。战争过后，重新洗完牌之后，就会又重复上面的情景，以至于就算是现在，大部分资源又回到体制内了，社会主义初级阶段也没跳出这个怪圈。那该如何解决这个问题呢？让人们都接受高等教育，深明大义？好像不太可能，上层阶级以为他们理所当然这样享受世人的供养，因为他们觉得他们或者他们的祖先奋斗过。资本主义的经济危机，好像是一场重新洗牌的执行者，让所有的价值统统归于没有，化整为零，然后再建立起来，重新发展，这不不得不说很大程度上减少了社会矛盾，因为重新洗牌了，下层人民跟上层人民又回到同一起跑线上了，广大的下层人民又斗志昂扬有激情拼命奋斗了。所以说，经济危机未尝不是一件好事，世界首富把财富捐献出去是明智之举，只有那些守旧的、贪图安逸期望不劳而获而想让家族永享富贵的统治阶级和资源的拥有者才会害怕。
 
 总结一下，这个循环就是：刚刚开始，人们拼命奋斗，然而只有少数人建立了基业；接着发展一段时间，大部分人还在奋斗赶超，但资源越来越往那些已经建立起基业的少数人手中集中，大家还算和平共处，相安无事；后来，大部分觉得自己奋斗没有用啊，资源已经被他们占有了，底层劳动人民的劳动果实也被上层给剥削了，于是他们呼唤重新洗牌，底层从不乏人才，于是大自然就要上演一场腥风血雨了。之后，腐朽的上层会被推翻，开明的继续留下来，大部分的人又回到来同一起跑线上，重复上面的脚本。
 
