--- a/_posts/2015-08-15-start.md
+++ b/_posts/2015-08-15-start.md
@@ -13,9 +13,9 @@ eye_catch: http://www.tianyaclub.com/photo/jd08/jd11860.02.jpg
 
 好久没写过东西，今天再提笔，略显生疏。
 
-以前自己不想写博客，一是自己写的这些东西可能别人早已经写了，二是我写的这些东西于别人，可能然并卵。而今在这个信息过载的时代，复制粘贴的恶劣行径已经带来严重不良后果，比如我搜一个问题的解决方案，搜索结果赫然有csdn的，有博客园的，有新浪播客的，为了快速，我通常都是打开好几个tab，然而打开一看，全是一样的内容。我英文不好，图省事，还是先中文搜索一下，然而最终还是到官网上看文档，这些csdn博客在这里生产的内容是显得那么多此一举，信息过载的罪魁祸首就是你们了，如今对一个东西的介绍只要一个官方的就行了，其他的copy或者自己的理解，都是浪费。所以，这儿并不生产某某问题的技术解决方案，并不阐述某某概念，并不copy已有的内容，只想记录自己的思想与生活的点滴。
+以前自己不想写博客，一是自己写的这些东西可能别人早已经写了，二是我写的这些东西于别人，可能然并卵。而今在这个信息过载的时代，复制粘贴的恶劣行径已经带来严重不良后果，比如我搜一个问题的解决方案，搜索结果赫然有csdn的，有博客园的，有新浪播客的，为了快速，我通常都是打开好几个tab，然而打开一看，全是一样的内容。我英文不好，图省事，还是先中文搜索一下，然而最终还是到官网上看文档，这些csdn博客在这里生产的内容是显得那么多此一举，信息过载的罪魁祸首就是你们了，如今对一个东西的介绍只要一个官方的就行了，其他的copy，都是浪费。所以，鼓励原创，鼓励翻译，这儿也并不生产某某问题的技术解决方案，并不阐述某某概念，并不copy已有的内容，只想记录自己的思想与生活的点滴。
 
-前几天，看到一个战国谁的墓里发现了《道德经》的手抄本，对比现在的版本，很多字是不同，哪些自以为学者的人就开始做文章了，说什么道德经被后人删改误解几千年了，什么原本应该是《德道经》，什么原本是“道可道，非恒道，名可名，非恒名”，诸如此类的。这帮学者，不搞出个名堂，好像就没人知道他们存在一样。最后非要弄个，“知”是“智”的通假字，才能让人们更好理解此类的，高中语文就被这给坑了，最原汁原味的被曲解成这样，这批学者难辞其咎，是嫌中国语文还不够复杂啊！知道的人跟智慧的人，能有多大区别，真是“医之好治不病以为功”，放眼两千余年，只有老子，庄子开创了唯心主义形而上学的路线，后世却鲜有新发展，原来都去咬文嚼字去了，可叹啊！
+前几天，看到一个战国谁的墓里发现了《道德经》的手抄本，对比现在的版本，很多字是不同，哪些自以为学者的人就开始做文章了，说什么道德经被后人删改误解几千年了，什么原本应该是《德道经》，什么原本是“道可道，非恒道，名可名，非恒名”，诸如此类的。这帮学者，不搞出个名堂，好像就没人知道他们存在一样。最后非要弄个，“知”是“智”的通假字，才能让人们更好理解此类的，高中语文就被这给坑了，最原汁原味的被曲解成这样，这批学者难辞其咎，是嫌中国语文还不够复杂啊！知道的人跟智慧的人，能有多大区别，真是“医之好治不病以为功”，放眼两千余年，只有老子，庄子开创了唯心主义形而上学的路线，后世却鲜有新发展，原来都去咬文嚼字去了，[捂脸]！
 
 这儿的文章不想多为世界增添一丝冗余，“若无必要，勿增一瓦”，大家想看一些概念的，请去维基百科，想要解决技术问题的，请去官方文档，这儿既不是这些内容的生产者，也不是他们的搬运工。
 
