--- a/_posts/2015-08-20-knowself.md
+++ b/_posts/2015-08-20-knowself.md
@@ -24,7 +24,7 @@ eye_catch: http://photocdn.sohu.com/20150525/mp16275591_1432514710752_5.jpeg
 
 人总是把自己想象得太好，往自己脸上贴金，然后去质问声讨别人，却否认别人给自己贴的种种不好的标签。一遇到别人对自己的指责，大部分情况下都是自己定义一遍这个不好的标签，然后声明这个与自己的行为不符合，或者一直说“不是，，不是，，”。
 
-现在社会上极其流行一个词，叫做“装逼”，这个本是批评那些原本不知道内幕，却又在哪班门弄斧的人。然而，这个词又被反过来被那些本来不知道的人用在那些比自己多知道一点的人身上。比如说，一位真正的技术高手，给你讲应该注意格式，命名规范，你却太注重自己的个性，说其装逼；比如说听到某个博学多才之人，跟你谈古论今，你一听，这里面的人物都没听说过，然后对其一句“装逼”；比如说别人说了你一句“无知”，你心里估计还是“装逼”，反说一句“通常说别人无知的人才是无知”。呵呵，你说的好有道理，一句“装逼”让这个社会失掉了多少尊师重道之风啊。我知道历来知识分子多傲骨，也不谈论这是个多元的社会，人都有自己的见解，也认可老子“知者不博，博者不知”，然而子曰：三人行，必有我师焉，他人比你强的地方确实比你强，值得学习；他人与你见解不一样的地方，说不定更有深意，值得称赞；给比你牛的人足够的尊重，谦虚纳言，自己才能有更高的成长，否则，你也就活在自以为自己很牛的世界里。
+现在社会上极其流行一个词，叫做“装逼”，这个本是批评那些原本不知道内幕，却又在哪班门弄斧的人。然而，这个词又被反过来被那些本来不知道的人用在那些比自己多知道一点的人身上。比如说，一位真正的技术高手，给你讲应该注意格式，命名规范，你却太注重自己的个性，说其装逼；比如说听到某个博学多才之人，跟你谈古论今，你一听，这里面的人物都没听说过，然后对其一句“装逼”；比如同等级别的别人说了你一下，你心里嘀咕这还是“装逼”。一句“装逼”让这个社会失掉了多少尊师重道之风啊。我知道历来知识分子多傲骨，也不谈论这是个多元的社会，人都有自己的见解，也认可老子“知者不博，博者不知”，然而子曰：三人行，必有我师焉，他人比你强的地方确实比你强，值得学习；他人与你见解不一样的地方，说不定更有深意，值得称赞；给比你牛的人足够的尊重，谦虚纳言，自己才能有更高的成长，否则，你也就活在自以为自己很牛的世界里。
 
 这个社会大部分都是庸俗之辈，普遍接受了高等教育只是掩盖了这个事实，要想再上一层真正成为精英，就收起你的个性，时刻谦卑，stay hungry，stay foolish！要知道，比你牛的人，更加个性，看到你还这么嚣张，本想叫你个一招半式，结果你白白浪费了机会。
 
