--- a/_posts/2015-08-23-lose.md
+++ b/_posts/2015-08-23-lose.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 牺牲
-tags: 牺牲 人生
+tags: 认知 牺牲 人生
 eye_catch: http://p0.qhimg.com/dr/610_376_/t0177ebe68ddc31fc9c.jpg
 ---
 
