--- a/_posts/2015-09-04-circle.md
+++ b/_posts/2015-09-04-circle.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 天理循环
-tags: 循环 系统
+title: 历史循环
+tags: 认知 循环 系统
 eye_catch: http://image.tuwang.com/Nature/RuralScene-1920-1363/DaTuKu.org@X-RuralScene.jpg
 ---
 
-自古多情人士多愁善感，常慨叹重逢是为了离别，那离别呢？离别当然也是为了重逢！
+自古多情人士常慨叹，重逢是为了离别，那离别呢？离别当然也是为了重逢！
 
 <!--more-->
 
@@ -23,7 +23,7 @@ eye_catch: http://image.tuwang.com/Nature/RuralScene-1920-1363/DaTuKu.org@X-Rura
 
 总结一下，这个循环就是：刚刚开始，人们拼命奋斗，然而只有少数人建立了基业；接着发展一段时间，大部分人还在奋斗赶超，但资源越来越往那些已经建立起基业的少数人手中集中，大家还算和平共处，相安无事；后来，大部分觉得自己奋斗没有用啊，资源已经被他们占有了，底层劳动人民的劳动果实也被上层给剥削了，于是他们呼唤重新洗牌，底层从不乏人才，于是大自然就要上演一场腥风血雨了。之后，腐朽的上层会被推翻，开明的继续留下来，大部分的人又回到来同一起跑线上，重复上面的脚本。
 
-除非这个社会能均衡发展，不均衡时能和平地实现重新洗牌，否则就只剩下战争了。市场经济自己产生的危机可以算一剂良药，只要分配不均衡，就会发动，试想一个董事长，平时开开会，可能有点领导才能，其他又何德何能干的最少得到的最多，领导才能与广大人们群众的劳动相比，虽是成事必须，但也实在微不足道。可能等人类的观念再度提升了，不那么膜拜看重管理者了，才会向更深的一层发展吧。
+除非这个社会能均衡发展，不均衡时能和平地实现重新洗牌，否则就只剩下战争了。市场经济自己产生的危机可以算一剂良药，只要分配不均衡，就会发动。一个管理人员，平时开开会，可能有点领导才能，其他又何德何能干的最少得到的最多呢，领导才能与广大人们群众的劳动相比，虽是成事必须，但也实在并不足道。可能等人类的观念再度提升了，不那么膜拜看重管理者了，才会向更深的一层发展吧。
 
 人之道，损不足而奉有余；但天之道，损有余而补不足。能以有余奉不足者，是可谓真明智之举。如此想想，金玉满堂，莫之能守；富贵而骄，自遗其咎，道理很深刻，所以这辈子积累财富，也要尽快散去，不富不穷，其实也挺好。社会矛盾实在忍不下去，爆发一次战乱重新洗牌也无可厚非，切勿贪图富贵，留恋长生，这一代的资源在上层阶级已经证明了你们的价值，下一代就让他们在同一起跑线上，刚开始拥有相同的资源，让新生的力量竞相争随吧！
 
