--- a/_posts/2015-09-04-contract.md
+++ b/_posts/2015-09-04-contract.md
@@ -1,11 +1,14 @@
 ---
 layout: post
 title: 知足常乐还是追求不止
-tags: 知足 追求
+tags: 认知 知足 追求
 eye_catch: /assets/img/0904.jpg
 ---
 
-圣人云：祸莫大于不知足，当知足常乐。但罗素说，对爱情的渴望,对知识的追求,对人类苦难不可遏制的同情,是支配我一生的单纯而强烈的三种感情。圣人也云：活到老，学到老。这岂不是与知足常乐冲突！到底哪一个是对的?
+- 祸莫大于不知足
+- 对爱情的渴望,对知识的追求,对人类苦难不可遏制的同情,是支配我一生的单纯而强烈的三种感情。
+
+明辨如你，是否看到了上面2句话的内在矛盾？
 
 <!--more-->
 
@@ -13,13 +16,13 @@ eye_catch: /assets/img/0904.jpg
 
 这两个问题起源于大学时候一次群聊，那是我和一群同龄人第一次正式谈论起这个话题。别看“知足常乐”、“追求不止”简简单单的八个字，看起来我们要知足常乐啊，我们也要追求不止啊，然而它们内在实实在在是矛盾的，我们的思想中的很多问题也大都回归到这个问题上来，因为大多时候我们只能从中二选一，要么“知足常乐”，要么“追求不止”。
 
-在此之前，我先会议一下我们那次在QQ群的聊天内容吧。彼时，正是于娟女博士去世不久，引发社会广泛的反响与思考，于我们也不例外。于娟在日记中反思生活细节，其中写道：“在生死临界点的时候，你会发现，任何的加班（长期熬夜等于慢性自杀），给自己太多的压力，买房买车的需求，这些都是浮云。如果有时间，好好陪陪你的孩子，把买车的钱给父母亲买双鞋子，不要拼命去换什么大房子，和相爱的人在一起，蜗居也温暖”。可以看出，于娟是给自己累死的，就像我们这群年轻人拼命挣钱一样，就像富士康的员工期望加班一样。我们那时的讨论正是从此展开，但是好像刚开始聊天的内容出现一边倒的言论，讨论于娟的种种不是（因为就连于娟本人都反思她自己这样舍本随末了），不要太累，不要因为挣钱结果透支了身体，要享受身边哪些你看不到的亲情，爱情和友情，这些才是最重要的，房子、汽车都是浮云，能给你带来多少快乐，不要太过追求这些配不上它们自身价值的东西。以上这些逻辑，一点都没错，后来就有人总结了，“所以嘛，做人要知足常乐”，中华两千多年前就有老子、庄子等提出来的“知足常乐”，佛经里面也重点讲究的深刻的修心养性之道，“凡所有相，皆为虚妄”，主张看破，追求内心的平静与安乐。先哲圣贤的话肯定是有道理的，以上生活哲理非一般痛苦经历，也总结不出。然而，随后某同学A君的一句话，瞬间让“知足常乐”的结论破碎，A君说：“关键我们何时才能知足常乐，知足常乐意味着我们停滞不前”，一语惊四座，“对啊，现在正是我们学习的时候，怎么能知足常乐”.......
+在此之前，我先回议一下那次在QQ群的聊天内容。彼时，正是于娟女博士去世不久，引发社会广泛的反响与思考，于我们也不例外。于娟在日记中反思生活细节，其中写道：“在生死临界点的时候，你会发现，任何的加班（长期熬夜等于慢性自杀），给自己太多的压力，买房买车的需求，这些都是浮云。如果有时间，好好陪陪你的孩子，把买车的钱给父母亲买双鞋子，不要拼命去换什么大房子，和相爱的人在一起，蜗居也温暖”。可以看出，于娟是给自己累死的，就像我们这群年轻人拼命挣钱一样，就像富士康的员工期望加班一样。我们那时的讨论正是从此展开，但是好像刚开始聊天的内容出现一边倒的言论，讨论于娟的种种不是（因为就连于娟本人都反思她自己这样舍本随末了），不要太累，不要因为挣钱结果透支了身体，要享受身边哪些你看不到的亲情，爱情和友情，这些才是最重要的，房子、汽车都是浮云，能给你带来多少快乐，不要太过追求这些配不上它们自身价值的东西。以上这些逻辑，一点都没错，后来就有人总结了，“所以嘛，做人要知足常乐”，中华两千多年前就有老子、庄子等提出来的“知足常乐”，佛经里面也重点讲究的深刻的修心养性之道，“凡所有相，皆为虚妄”，主张看破，追求内心的平静与安乐。先哲圣贤的话肯定是有道理的，以上生活哲理非一般痛苦经历，也总结不出。然而，随后某同学A君的一句话，瞬间让“知足常乐”的结论破碎，A君说：“关键我们何时才能知足常乐，知足常乐意味着我们停滞不前”，一语惊四座，“对啊，现在正是我们学习的时候，怎么能知足常乐”.......
 
-且说上面A君说的那句是否严格，知足常乐是否等于停滞不前，有人肯定会说了，知足常乐怎么等于停滞不前了，我知足常乐照样可以向前行。回答这个问题可能需要太多的材料了，你自己可能知足了，但想想你的家人你可能会为了它们而继续努力，你可能会说，我知足常乐了，我的心性更加成熟了，十分正确。但你要说，我知足常乐了，我照样可以继续学习知识，某些修为深的，却是可以，但对于我等，你继续学习知识，恰恰说明了你并没有知足，你快乐可能是因为另外其他的缘由。所有我对那个等号不做过多的辩论和解释，因为本着现实意义，我直接认可这种等号关系，就像抛去感情色彩，“勾结”跟“团结”意思一模一样。
+且说上面A君说的那句是否严格，知足常乐是否等于停滞不前，有人肯定会说了，知足常乐怎么等于停滞不前了，我知足常乐照样可以向前行。回答这个问题可能需要太多的材料了，你自己可能知足了，但想想你的家人你可能会为了它们而继续努力，你可能会说，我知足常乐了，我的心性更加成熟了，十分正确。但你要说，我知足常乐了，我照样可以继续学习知识，某些修为深的，却是可以，但对于我等，你继续学习知识，恰恰说明了你并没有知足，你快乐可能是因为另外其他的缘由。所有我对那个等号不做过多的辩论和解释，因为本着现实意义，我直接认可这种等号关系，抛去人为主管感情色彩。
 
 那问题一来了，“知足常乐”还是“追求不止”，到底那个是对的？你可能会拿着马克思主义辩证性的看待这件事，但辨证之后，你能从中得到正确的结论来给当前正陷在这个问题漩涡中的你英明的指导吗？很多时候，我们必须强迫自己选择一个，只有选择了，这个问题才算真正解答，才有意义。含糊其辞、模棱两可都是忽悠！一旦选择了，就别后悔，就算以后环境不一样了，另一种选择更加明智，但也别轻易推翻以前的选择，而是回想一下当初为什么选择它，为什么现在又要放弃它，否则你会给很多处在你以前那个阶段的人误导，他们称你作为过来人的这种结论为“经验”，但这绝非“智慧”。
 
-我曾经写过一遍作文，写的就是追求不止的主题，写得慷慨激昂，时至现在我还念念不忘。所以我现在依然认可追求不止。虽然我佛慈悲，有言在先，但不能每人都做了和尚，如果那样还有谁给佛陀做他们化斋吃的斋饭。佛陀说了，这种情况永远不可达到，意思好像他们济世救人，好像有永远救不完的凡人给他们做饭一样。佛陀给我的这个解答并不能让我满意，而罗素罗兰的那句话，不知道被多少人当作座右铭，依然让我认为说出了真正实在的选择，罗素罗兰可能离我们太久，脱离这个物欲横流的社会，那么王小波的作品中表现的他最珍视的三个元素，智慧、性爱、乐趣，想必更加实在了吧。然而，更深层次的意义，还是这个世界的发展，让人担心的不是大家都去当了和尚没人再给和尚做化斋的斋饭，而是这个世界再也没什么突破，爱迪生没有追求不止的话，也许我们现在还享受不到灯泡带来的光明。这就像凯文凯利对技术的描写与看法一样深邃。然而，最让人承认的事实是，如果没有什么牛逼的经历让内心满足，而是一开始就走这条知足常乐之路，那往往是一点也不现实的，你想想庄子、得道高僧那样能知足常乐的人，其本身也有着不俗的修为。
+我曾经写过一遍作文，写的就是追求不止的主题，写得慷慨激昂，时至现在我还念念不忘。所以我现在依然认可追求不止。虽然我佛慈悲，有言在先，但不能每人都做了和尚，如果那样还有谁给佛陀做他们化斋吃的斋饭。佛陀说了，这种情况永远不可达到，意思好像他们济世救人，好像有永远救不完的凡人给他们做饭一样。佛陀给我的这个解答并不能让我满意，而罗素罗兰的那句话，不知道又被多少人当作座右铭，依然让我认为说出了真正实在的选择，罗素罗兰可能离我们太久，脱离这个物欲横流的社会，那么王小波的作品中表现的他最珍视的三个元素，智慧、性爱、乐趣，想必更加实在了吧。然而，更深层次的意义，还是这个世界的发展，让人担心的不是大家都去当了和尚没人再给和尚做化斋的斋饭，而是这个世界再也没什么突破，爱迪生没有追求不止的话，也许我们现在还享受不到灯泡带来的光明。这就像凯文凯利对技术的描写与看法一样深邃。最后，还有一个关键的事实，如果没有什么牛逼的经历让内心满足，而是一开始就走这条知足常乐之路，那往往是一点也不现实的，你想想庄子、得道高僧那样能知足常乐的人，其本身也有着不俗的修为。
 
 那问题二来了，何时知足常乐？“知足常乐”和“追求不止”就像每个人心中的天平，都有着一个平衡点。当一个人觉得自己现在的状态碌碌无为时，他会在内心告诫自己要追求更强的自己；而当他为此付出足够的努力而感到疲倦时，他就会在内心体谅自己说，我现在拥有的已经够多了，比起那些不能走路的、眼睛盲的，我自己实在是已经幸运极了，干嘛还要再往上努力呢，要知足常乐。这种循环，不知正在看这篇文章的你是否熟悉？在北上广深奋斗的你，一方面要给自己打气，我以后要在北京留下来，在帝都魔都拥车买房；可当看到那点凭自己加班加点辛辛苦苦挣到的那点工资多么微不足道时，你又想，“大城市挣钱，回家花”是多么的正确。或者，在现在这个大好形势下，我一介屌丝一定要创业成为富一代；却发现自己上班都这么累，公司的老板看上去更累，我这弱小的身板怎么受的住，遂不敢往下想......这就像《第五项修炼》里面的反馈环路，“追求不止”是积极的正反馈，“知足常乐”是负反馈，常会带来消极的结果。
 
